The pom has been updated with a spring boot dev tools dependecies which has features to that makes web development easier. home.html: developed the bare bones of the page. Index updated with a change that replaced a tag which has depreciated.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,14 @@
     <title>Home Page</title>
 </head>
 <body>
-    <h1>hey</h1>
+    <main>
+        <section>
+            <form id="addNewItem"></form>
+            <label for="newItem">Enter a new todo item</label>
+            <input id="newItem" type="text" size="40"
+                   autocomplete="off" placeholder="Add items"
+                   tabindex="0"/>
+        </section>
+    </main>
 </body>
 </html>
