--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <content>
+        <section class="login">
             <h2> Login here
             </h2>
             <form action="home.html" method="get">
@@ -19,10 +19,10 @@
                 <input type="submit" value="Submit"><br>
                 <a href="accounts/password/reset.html">Forgot password</a>
             </form>
-        </content>
-        <content>
+        </section>
+        <section class="createNewAccount">
             <p>Don't have a account<a href="accounts/sign-up">sign-up</a></p>
-        </content>
+        </section>
     </main>
 </body>
 </html>
